app/app.css
/* app css stylesheet */

/*.menu {*/
  /*list-style: none;*/
  /*border-bottom: 0.1em solid black;*/
  /*margin-bottom: 2em;*/
  /*padding: 0 0 0.5em;*/
/*}*/

/*.menu:before {*/
  /*content: "[";*/
/*}*/

/*.menu:after {*/
  /*content: "]";*/
/*}*/

/*.menu > li {*/
  /*display: inline;*/
/*}*/

/*.menu > li + li:before {*/
  /*content: "|";*/
  /*padding-right: 0.3em;*/
/*}*/

#eventList{
    max-height: 300px;
    overflow: scroll
}

